--- a/doc-site-app/src/main/resources/db.changelog/db.changelog-master.yaml
+++ b/doc-site-app/src/main/resources/db.changelog/db.changelog-master.yaml
@@ -1,38 +1,3 @@
 databaseChangeLog:
-  - changeSet:
-      id: 1
-      author: sironm
-      changes:
-        - createTable:
-            tableName: person
-            columns:
-              - column:
-                  name: id
-                  type: int
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: first_name
-                  type: varchar(255)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: last_name
-                  type: varchar(255)
-                  constraints:
-                    nullable: false
-  - changeSet:
-      id: 2
-      author: sironm
-      changes:
-        - inserst:
-            tableName: person
-            columns:
-              - column:
-                  name: first_name
-                  value: Michal
-              - column:
-                  name: last_name
-                  value: Siron
+  - include:
+      file: db.changelog/db.changelog-0.0.1.yaml
