--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,11 @@
 	</developers>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>1.9</java.version>
 		<version.postgresql>42.2.5</version.postgresql>
 		<version.commons-lang3>3.8.1</version.commons-lang3>
+		<version.liquibase>3.6.3</version.liquibase>
+		<version.jackson>2.9.8</version.jackson>
 	</properties>
 
 	<modules>
@@ -39,18 +41,6 @@
 		<module>doc-site-frontend</module>
 		<module>doc-site-persistence</module>
 	</modules>
-
-	<!--<dependencies>-->
-		<!--<dependency>-->
-			<!--<groupId>org.liquibase</groupId>-->
-			<!--<artifactId>liquibase-core</artifactId>-->
-		<!--</dependency>-->
-
-		<!--<dependency>-->
-			<!--<groupId>org.springframework.boot</groupId>-->
-			<!--<artifactId>spring-boot-starter-jdbc</artifactId>-->
-		<!--</dependency>-->
-	<!--</dependencies>-->
 
 	<dependencyManagement>
 		<dependencies>
@@ -61,23 +51,24 @@
 				<!--<scope>runtime</scope>-->
 			</dependency>
 
-			<!--<dependency>-->
-				<!--<groupId>org.springframework.boot</groupId>-->
-				<!--<artifactId>spring-boot-starter-jdbc</artifactId>-->
-			<!--</dependency>-->
-
-
 			<dependency>
 				<groupId>org.liquibase</groupId>
 				<artifactId>liquibase-core</artifactId>
-				<version>3.6.3</version>
+				<version>${version.liquibase}</version>
 			</dependency>
 
-			<!--<dependency>-->
-				<!--<groupId>com.h2database</groupId>-->
-				<!--<artifactId>h2</artifactId>-->
-				<!--<scope>runtime</scope>-->
-			<!--</dependency>-->
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-annotations</artifactId>
+				<version>${version.jackson}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.fasterxml.jackson.datatype</groupId>
+				<artifactId>jackson-datatype-hibernate5</artifactId>
+				<version>2.9.8</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
