--- a/doc-site-app/src/main/resources/application.yaml
+++ b/doc-site-app/src/main/resources/application.yaml
@@ -17,5 +17,5 @@ spring:
   liquibase:
     change-log: classpath:/db.changelog/db.changelog-master.yaml
     enabled: true
-#server:
-#  port: 8088
+server:
+  port: 8088
