Authentication seems fine

--- a/doc-site-app/src/main/resources/db.changelog/db.changelog-mock-0.0.1.yaml
+++ b/doc-site-app/src/main/resources/db.changelog/db.changelog-mock-0.0.1.yaml
@@ -120,10 +120,7 @@ databaseChangeLog:
                 value: sironm
             - column:
                 name: password
-                value: 123
-            - column:
-                name: role_id
-                value: 2
+                value: $2a$12$7T0skwgLgaMUSvLc3QTGDe9oj/reKzb8cmy6wHuF3JCeyJDIDKDfK
             - column:
                 name: created_at
                 value: now()
