New model objects, new constratints/mock/tables in liquibase, application context to /api

--- a/doc-site-app/src/main/resources/application.yaml
+++ b/doc-site-app/src/main/resources/application.yaml
@@ -1,4 +1,7 @@
 spring:
+#  data:
+#    rest:
+#      base-path: /api
   jpa:
     show-sql: true
     properties:
@@ -19,3 +22,5 @@ spring:
     enabled: true
 server:
   port: 8088
+  servlet:
+    context-path: /api
