--- a/doc-site-app/src/main/resources/db.changelog/db.changelog-constraints-0.0.1.yaml
+++ b/doc-site-app/src/main/resources/db.changelog/db.changelog-constraints-0.0.1.yaml
@@ -68,6 +68,7 @@ databaseChangeLog:
             onUpdate: RESTRICT
             referencedColumnNames: surgery_id
             referencedTableName: surgery
+#
         - addForeignKeyConstraint:
             baseColumnNames: contact_id
             baseTableName: surgery
@@ -76,6 +77,16 @@ databaseChangeLog:
             onUpdate: RESTRICT
             referencedColumnNames: contact_id
             referencedTableName: contact
+#
+        - addForeignKeyConstraint:
+              baseColumnNames: medical_facility_id
+              baseTableName: surgery
+              constraintName: fk_surgery_medicFacility
+              onDelete: CASCADE
+              onUpdate: RESTRICT
+              referencedColumnNames: medical_facility_id
+              referencedTableName: medical_facility
+#
         - addForeignKeyConstraint:
             baseColumnNames: address_id
             baseTableName: surgery
@@ -84,6 +95,7 @@ databaseChangeLog:
             onUpdate: RESTRICT
             referencedColumnNames: address_id
             referencedTableName: address
+#
         - addForeignKeyConstraint:
             baseColumnNames: person_id
             baseTableName: patient
@@ -92,6 +104,7 @@ databaseChangeLog:
             onUpdate: RESTRICT
             referencedColumnNames: person_id
             referencedTableName: person
+#
         - addForeignKeyConstraint:
             baseColumnNames: surgery_id
             baseTableName: patient
@@ -100,6 +113,7 @@ databaseChangeLog:
             onUpdate: RESTRICT
             referencedColumnNames: surgery_id
             referencedTableName: surgery
+#
         - addForeignKeyConstraint:
             baseColumnNames: surgery_id
             baseTableName: doctor
@@ -108,6 +122,7 @@ databaseChangeLog:
             onUpdate: RESTRICT
             referencedColumnNames: surgery_id
             referencedTableName: surgery
+#
         - addForeignKeyConstraint:
             baseColumnNames: person_id
             baseTableName: doctor
@@ -116,6 +131,7 @@ databaseChangeLog:
             onUpdate: RESTRICT
             referencedColumnNames: person_id
             referencedTableName: person
+#
         - addForeignKeyConstraint:
             baseColumnNames: address_id
             baseTableName: person
