--- a/doc-site-frontend/src/main/resources/package.json
+++ b/doc-site-frontend/src/main/resources/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "7.2.2",
     "@svgr/webpack": "4.1.0",
+    "antd": "^3.15.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -118,7 +119,10 @@
   },
   "devDependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-import": "^1.11.0",
     "bcryptjs": "^2.4.3",
+    "react-app-rewire-less": "^2.1.3",
+    "react-app-rewired": "^2.1.1",
     "react-router-dom": "^4.3.1"
   }
 }
